# ethan-rs-wc

./: Cargo.toml  README.md  README.zh.md
.github/workflows/: tests.yml
src/: lib.rs  main.rs  parse.rs  stat.rs
tests/: integration_test.rs
tests/data/: test.txt
